--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ packages = [
 [tool.poetry.dependencies]
 python                  = { version = ">= 3.9, <= 3.11" }
 google-cloud-storage    = { version = ">=2.7.0" }
+protobuf                = { version = "==3.20.1" }
 
 # dev
 black                   = { version = ">=22.10.0", optional = true }
